[workspace]
members = [
    "frontend",
    "backend",
]
resolver = "2"

[profile.release]
strip = true
lto = "thin"
#panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.metadata.leptos]
lib-profile-release = "wasm-release"
[workspace.metadata.leptos_meta]
lib-profile-release = "wasm-release"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
axum = {version = "0.7.5", features = ["http2", "macros", "multipart", "ws"]}
leptos = { version = "0.6.12", features = ["csr"] }
leptos_meta = { version = "0.6.12", features = ["csr"] }
rusqlite = "0.31.0"
rustls = "0.23.10"
serde = "1.0.203"
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "net", "time", "macros", "sync", "tracing"]}
tokio-util = { version = "0.7.11", features = ["codec", "io-util"]}
tracing = { version = "0.1.40", features = ["default", "max_level_debug", "release_max_level_off"]}
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
zstd = { version = "0.13.1", features = ["zstdmt"] }
bindgen = "0.69.4"
