[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
nftables.workspace = true
axum.workspace = true
rusqlite.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
zstd.workspace = true
tower.workspace = true
tower-http.workspace = true

[build-dependencies]
bindgen.workspace = true
